adjust git ignore and add constraint support to orm